--- a/src/assets/sass/main.scss
+++ b/src/assets/sass/main.scss
@@ -343,7 +343,7 @@
 			h2, h3, h4, h5, h6 {
 				border-bottom: solid 2px _palette(border);
 				display: inline-block;
-				padding-bottom: 1em;
+				padding-bottom: 0.8em;
 				position: relative;
 
 				&:after {
@@ -1163,7 +1163,8 @@
 
 				&.major {
 					h2, h3, h4, h5, h6 {
-						border-color: _palette($p, border);
+						// border-color: _palette($p, border);
+						border-color: white;
 					}
 
 					p {
