--- a/src/styles/pages/index.scss
+++ b/src/styles/pages/index.scss
@@ -1,8 +1,9 @@
 #one, #two {
-  background-color: rgba($color: #000000, $alpha: 0.5);
+  background-color: rgba($color: #000, $alpha: 0.5);
 }
 a {
-  text-decoration: none;
+  // text-decoration: none;
+  border: 0px;
 }
 #go-top {
   display: none; /* Hidden by default */
