--- a/src/styles/pages/project.module.scss
+++ b/src/styles/pages/project.module.scss
@@ -14,3 +14,6 @@
     border: 0px;
     // border: 0px !important;
 }
+#background {
+  background-image: linear-gradient(to left top, rgba(0,29,73,.5), rgba(29,19,51,.5), rgba(30,12,32,.5), rgba(23,5,16,.5), rgba(0,0,0,.5));
+}
