Deleted unused components and secions, add resume link with absolute position, provided check confirmation instead of an alert

--- a/src/styles/pages/blog.module.scss
+++ b/src/styles/pages/blog.module.scss
@@ -1,5 +1,8 @@
 #background {
   background-image: linear-gradient(to right bottom, rgba(5,25,55,.5), rgba(12,27,70,.5), rgba(29,27,84,.5), rgba(50,23,95,.5), rgba(74,9,102,.5));
+  li i {
+    font-size: 90%;
+  }
 }
 .blog-image {
   max-width: 110px;
