--- a/src/styles/pages/index.scss
+++ b/src/styles/pages/index.scss
@@ -38,3 +38,8 @@ a {
     transform: scale(1);
   }
 }
+// Footer
+// footer {
+//   background-image: linear-gradient(to left top, rgba(0,29,73,.5), rgba(29,19,51,.5), rgba(30,12,32,.5), rgba(23,5,16,.5), rgba(0,0,0,.5));
+  
+// }
