--- a/src/styles/pages/index.scss
+++ b/src/styles/pages/index.scss
@@ -14,7 +14,7 @@ a {
   z-index: 99; /* Make sure it does not overlap */
   border: none; /* Remove borders */
   outline: none; /* Remove outline */
-  background-color: rgba($color: #000, $alpha: 0); /* Set a background color */
+  background-color: rgba($color: #000, $alpha: .5); /* Set a background color */
   color: white; /* Text color */
   padding: 0 7px 0 10px;
   cursor: pointer; /* Add a mouse pointer on hover */
