--- a/src/styles/components/skill.scss
+++ b/src/styles/components/skill.scss
@@ -41,7 +41,7 @@
   }
 }
 .css {
-  width: 50%;
+  width: 70%;
   animation: css 5s;
 }
 @keyframes css {
@@ -49,7 +49,7 @@
     width: 0%;
   }
   100% {
-    width: 50%
+    width: 70%
   }
 }
 .javascript {
@@ -93,6 +93,18 @@
   animation: ruby 5s;
 }
 @keyframes ruby {
+  0% {
+    width: 0%;
+  }
+  100% {
+    width: 90%
+  }
+}
+.aspdotnet {
+  width: 90%;
+  animation: aspdotnet 5s;
+}
+@keyframes aspdotnet {
   0% {
     width: 0%;
   }
